Added Hover Effect to Header Icons

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,6 +7,8 @@
   --candy-red: #d90429;
   --lotion: #fafafa;
 
+  --background: rgba(255, 255, 255, 0.302);
+
   --average-transition: all 0.3s ease-in-out;
 }
 
