--- a/src/scss/templates/layout/_header.scss
+++ b/src/scss/templates/layout/_header.scss
@@ -20,9 +20,16 @@
   &__action {
     cursor: pointer;
     margin-right: 20px;
+    background-color: transparent;
+    padding: 3px;
+    border-radius: 3px;
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &:hover {
+      background-color: var(--background);
     }
   }
 
@@ -49,6 +56,10 @@
     transition: var(--average-transition);
     display: flex;
     align-items: center;
+  }
+
+  &__add-task {
+    padding: 5px;
   }
 
   &__form {
