Creted the Markup for Tasks Page
Created Tag, AddTask components, TagItems object, and stylize these all

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -6,8 +6,10 @@
   --imperial-red: #ef233c;
   --candy-red: #d90429;
   --lotion: #fafafa;
+  --grey: #888888;
 
-  --background: rgba(255, 255, 255, 0.302);
+  --background-primary: rgba(255, 255, 255, 0.302);
+  --background-secondary: #eeeeee;
 
   --average-transition: all 0.3s ease-in-out;
 }
