--- a/src/scss/templates/components/_input.scss
+++ b/src/scss/templates/components/_input.scss
@@ -1,6 +1,6 @@
 .input {
   color: var(--white);
-  background-color: var(--background);
+  background-color: var(--background-primary);
   font-family: 'SF Rounded';
   border: none;
   outline: none;
