--- a/src/scss/_defaults.scss
+++ b/src/scss/_defaults.scss
@@ -34,6 +34,7 @@ li {
   flex: 1 0 auto;
   width: calc(100% - 358px);
   margin-left: 358px;
+  transition: var(--average-transition);
 
   &-only {
     width: 100%;
@@ -43,6 +44,11 @@ li {
 
 .container {
   max-width: 1800px;
+  margin: 0 auto;
+}
+
+.pages-container {
+  max-width: 800px;
   margin: 0 auto;
 }
 
