--- a/src/scss/templates/layout/_header.scss
+++ b/src/scss/templates/layout/_header.scss
@@ -1,61 +1,59 @@
 .header {
-  background-color: var(--imperial-red);
-  flex: 0 0 auto;
   z-index: 1;
+  flex: 0 0 auto;
   padding: 10px 0;
+  background-color: var(--imperial-red);
 
   &-inner {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
   }
 
   &-left,
-  &-center,
   &-right {
     display: flex;
     align-items: center;
   }
 
   &__action {
-    cursor: pointer;
     margin-right: 20px;
-    background-color: transparent;
-    padding: 3px;
     border-radius: 3px;
+    padding: 3px;
+    background-color: transparent;
+    cursor: pointer;
+
+    &:hover {
+      background-color: var(--background-primary);
+    }
 
     &:last-child {
       margin-right: 0;
     }
-
-    &:hover {
-      background-color: var(--background);
-    }
   }
 
   &__hamburger-menu {
-    & span {
+    &-bar {
+      display: block;
+      margin: 3px 0;
+      width: 20px;
+      height: 2px;
       background-color: var(--white);
       transition: var(--average-transition);
-      display: block;
-      height: 2px;
-      width: 20px;
-      margin: 3px 0;
     }
 
-    &:hover div {
+    &:hover &-bar {
       background-color: var(--anti-flash-white);
     }
   }
 
   &__house,
-  &__logo,
   &__add-task,
   &__user {
-    color: var(--white);
-    transition: var(--average-transition);
     display: flex;
     align-items: center;
+    color: var(--white);
+    transition: var(--average-transition);
   }
 
   &__add-task {
@@ -67,11 +65,11 @@
   }
 
   &__search-icon {
+    position: absolute;
+    left: 5%;
+    top: 20%;
     color: var(--white);
     cursor: pointer;
-    position: absolute;
-    top: 20%;
-    left: 5%;
   }
 
   & &__search {
