--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,47 +1,47 @@
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Black.otf);
+  font-family: 'SF Rounded';
   font-weight: 900;
+  src: url('../assets/fonts/SF-Pro-Rounded-Black.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Bold.otf);
+  font-family: 'SF Rounded';
   font-weight: 700;
+  src: url('../assets/fonts/SF-Pro-Rounded-Bold.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Semibold.otf);
+  font-family: 'SF Rounded';
   font-weight: 600;
+  src: url('../assets/fonts/SF-Pro-Rounded-Semibold.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Medium.otf);
+  font-family: 'SF Rounded';
   font-weight: 500;
+  src: url('../assets/fonts/SF-Pro-Rounded-Medium.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Regular.otf);
+  font-family: 'SF Rounded';
   font-weight: 400;
+  src: url('../assets/fonts/SF-Pro-Rounded-Regular.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Light.otf);
+  font-family: 'SF Rounded';
   font-weight: 300;
+  src: url('../assets/fonts/SF-Pro-Rounded-Light.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Ultralight.otf);
+  font-family: 'SF Rounded';
   font-weight: 200;
+  src: url('../assets/fonts/SF-Pro-Rounded-Ultralight.otf');
 }
 
 @font-face {
-  font-family: "SF Rounded";
-  src: url(../assets/fonts/SF-Pro-Rounded-Thin.otf);
+  font-family: 'SF Rounded';
   font-weight: 100;
+  src: url('../assets/fonts/SF-Pro-Rounded-Thin.otf');
 }
