--- a/src/scss/templates/components/_accordion.scss
+++ b/src/scss/templates/components/_accordion.scss
@@ -1,8 +1,8 @@
 .accordion {
-  margin: 0;
   display: flex;
   flex-direction: column;
   width: 100%;
+  margin: 0;
 
   &__title {
     font-size: 18px;
@@ -14,12 +14,12 @@
   }
 
   &__toggle {
+    align-self: center;
     width: 16px;
     height: 16px;
     margin-left: 10px;
-    align-self: center;
-    transition: all 0.35s ease;
     user-select: none;
+    transition: all 0.35s ease;
 
     &[aria-expanded='true'] {
       transform: rotateZ(-180deg);
@@ -27,12 +27,12 @@
   }
 
   &__content {
-    overflow: hidden;
     max-height: 1000px;
+    overflow: hidden;
     transition: max-height 1s ease-in-out;
 
     &[aria-expanded='true'] {
-      max-height: 0px;
+      max-height: 0;
       transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
     }
   }
