--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,14 +1,16 @@
-@import 'vars';
-@import 'fonts';
-@import 'defaults';
+@import "vars";
+@import "fonts";
+@import "defaults";
 
-@import './templates/layout/header';
-@import './templates/layout/aside';
-@import './templates/layout/tasks';
+@import "./templates/layout/header";
+@import "./templates/layout/aside";
+@import "./templates/layout/tasks";
 
-@import './templates/layout/error';
+@import "./templates/layout/error";
 
-@import './templates/components/input';
-@import './templates/components/accordion';
-@import './templates/components/tag';
-@import './templates/components/addTask';
+@import "./templates/components/input";
+@import "./templates/components/accordion";
+@import "./templates/components/tag";
+@import "./templates/components/addTask";
+@import "./templates/components/button";
+@import "./templates/components/todo";
