--- a/src/scss/templates/layout/_error.scss
+++ b/src/scss/templates/layout/_error.scss
@@ -3,4 +3,12 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  background-color: var(--light-pink);
+
+  &-inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 250px;
+  }
 }
