Created Modal, Other In Description
Upgraded to React 18, Changed states naming, aside toggle button at header, button component, naming of classes of add task tag items; Sorted Todo component

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -14,3 +14,4 @@
 @import "./templates/components/addTask";
 @import "./templates/components/button";
 @import "./templates/components/todo";
+@import "./templates/components/modal";
