Created A Function To Save The Tasks In LocalStorage, Changed Button Component

--- a/src/scss/templates/components/_button.scss
+++ b/src/scss/templates/components/_button.scss
@@ -20,11 +20,11 @@
     }
   }
 
-  &[active] {
+  &.active {
     background-color: var(--imperial-red);
   }
 
-  &[outline] {
+  &.outline {
     color: var(--gunmetal);
     background-color: transparent;
     border: 1px solid var(--gunmetal);
