--- a/src/scss/templates/components/_addTask.scss
+++ b/src/scss/templates/components/_addTask.scss
@@ -28,8 +28,8 @@
 
   &__content {
     padding: 10px;
-    border: 1px solid var(--gunmetal);
     border-radius: 10px;
+    box-shadow: 0 5px 15px 0 rgb(0 0 0 / 35%);
   }
 
   &__areas {
