--- a/src/scss/templates/components/_modal.scss
+++ b/src/scss/templates/components/_modal.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  overflow-y: auto;
   pointer-events: none;
   background-color: rgba(0 0 0 / 40%);
   opacity: 0;
