--- a/src/scss/templates/components/_modal.scss
+++ b/src/scss/templates/components/_modal.scss
@@ -2,20 +2,29 @@
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 100vw;
   height: 100vh;
   overflow-y: auto;
   pointer-events: none;
   background-color: rgba(0 0 0 / 40%);
+  visibility: hidden;
   opacity: 0;
+  overflow-y: auto;
+  overflow-x: hidden;
   transition: all 0.5s ease-in-out;
 
   &.active {
     pointer-events: all;
     opacity: 1;
+    visibility: visible;
+  }
+
+  &__body {
+    min-height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 30px 10px;
   }
 
   &__content {
