--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -5,6 +5,7 @@
   --light-pink: #fde9ec;
   --cool-grey: #8d99ae;
   --grey: #888;
+  --light-grey: #ccc;
   --imperial-red: #ef233c;
   --candy-red: #d90429;
   --gunmetal: #2b2d42;
