--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -15,3 +15,6 @@
 @import "./templates/components/button";
 @import "./templates/components/todo";
 @import "./templates/components/modal";
+@import "./templates/components/dropdown";
+@import "./templates/components/listGroup";
+@import "./templates/components/listGroupItem";
