--- a/src/scss/templates/components/_modal.scss
+++ b/src/scss/templates/components/_modal.scss
@@ -2,28 +2,28 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 5;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
   overflow-y: auto;
   pointer-events: none;
-  background-color: rgba(0 0 0 / 40%);
   visibility: hidden;
+  background-color: rgba(0 0 0 / 40%);
   opacity: 0;
-  overflow-y: auto;
-  overflow-x: hidden;
   transition: all 0.5s ease-in-out;
 
   &.active {
     pointer-events: all;
-    opacity: 1;
     visibility: visible;
+    opacity: 1;
   }
 
   &__body {
-    min-height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 100%;
     padding: 30px 10px;
   }
 
